--- a/submodules/CMakeLists.txt
+++ b/submodules/CMakeLists.txt
@@ -4,5 +4,6 @@ project(TestSubmodules VERSION 1.0.0 LANGUAGES C CXX)
 
 set(LIBRARY_NAME "Library")
 
+add_subdirectory(configure)
 add_subdirectory(lib)
 add_subdirectory(src)
