--- a/submodules/lib/CMakeLists.txt
+++ b/submodules/lib/CMakeLists.txt
@@ -1,2 +1,7 @@
 add_library(Library STATIC lib.cc)
-target_include_directories(Library PUBLIC "./")
+target_include_directories(
+    Library 
+    PUBLIC 
+    "./"
+    "${CMAKE_SOURCE_DIR}/configured"
+)
