--- a/submodules/configure/consts.hpp.in
+++ b/submodules/configure/consts.hpp.in
@@ -2,5 +2,6 @@
 
 #include <string_view>
 
-static constexpr std::string_view PROJECT_NAME = "@PROJECT_NAME@";
-static constexpr std::string_view PROJECT_VERSION = "@CMAKE_PROJECT_VERSION@";
+static constexpr std::string_view 
+    PROJECT_NAME = "@PROJECT_NAME@",
+    PROJECT_VERSION = "@PROJECT_VERSION@";
